RESOLVED FIXED125572
[EFL] Fix build with CONTEXT_MENUS flag set OFF
https://bugs.webkit.org/show_bug.cgi?id=125572
Summary [EFL] Fix build with CONTEXT_MENUS flag set OFF
Michal Pakula vel Rutka
Reported 2013-12-11 06:31:55 PST
SSIA
Attachments
proposed patch (10.17 KB, patch)
2013-12-11 06:37 PST, Michal Pakula vel Rutka
no flags
Michal Pakula vel Rutka
Comment 1 2013-12-11 06:37:47 PST
Created attachment 218958 [details] proposed patch
Gyuyoung Kim
Comment 2 2013-12-11 06:48:42 PST
Comment on attachment 218958 [details] proposed patch Though this patch modifies files out of EFL port files, this patch looks reasonable. r=me.
WebKit Commit Bot
Comment 3 2013-12-11 08:07:12 PST
Comment on attachment 218958 [details] proposed patch Clearing flags on attachment: 218958 Committed r160432: <http://trac.webkit.org/changeset/160432>
WebKit Commit Bot
Comment 4 2013-12-11 08:07:15 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.