Source/WebCore: [EFL] Fix build with CONTEXT_MENUS flag set OFF https://bugs.webkit.org/show_bug.cgi?id=125572

Reviewed by Gyuyoung Kim.

dispatchEventAsContextMenuEvent is called regardless of CONTEXT_MENUS flag setting,
thus its definition in InspectorFrontendHost should not be guarded by this flag.

No new tests, no behaviour change.

* inspector/InspectorFrontendHost.cpp:
(WebCore::InspectorFrontendHost::dispatchEventAsContextMenuEvent):

Source/WebKit2: [EFL] Fix build with CONTEXT_MENUS flag set OFF
https:///bugs.webkit.org/show_bug.cgi?id=125572

Reviewed by Gyuyoung Kim.

Fix EFL build by adding necessary guard, also UNUSED_PARAM macros where added.

* Shared/API/c/WKContextMenuItem.cpp: Added UNUSED_PARAM macros.
(WKContextMenuItemCreateAsAction):
(WKContextMenuItemCreateAsCheckableAction):
(WKContextMenuItemCreateAsSubmenu):
(WKContextMenuItemGetTag):
(WKContextMenuItemGetType):
(WKContextMenuItemCopyTitle):
(WKContextMenuItemGetEnabled):
(WKContextMenuItemGetChecked):
(WKContextMenuCopySubmenuItems):
(WKContextMenuItemGetUserData):
(WKContextMenuItemSetUserData):
* UIProcess/API/C/WKPage.cpp: Ditto.
(WKPageSetPageContextMenuClient):
(WKPageSelectContextMenuItem):
* WebProcess/InjectedBundle/API/c/WKBundlePage.cpp: Ditto.
(WKBundlePageSetContextMenuClient):
(WKBundlePageClickMenuItem):
(WKBundlePageCopyContextMenuItems):
(WKBundlePageCopyContextMenuAtPointInWindow)
* UIProcess/efl/WebViewEfl.cpp: Guard createContextMenuProxy method.
* UIProcess/efl/WebViewEfl.h: Ditto.


Canonical link: https://commits.webkit.org/143624@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@160432 268f45cc-cd09-0410-ab3c-d52691b4dbfc