Source/WebKit2/Shared/API/c/WKContextMenuItem.cpp
@@ -53,6 +53,9 @@ WKContextMenuItemRef WKContextMenuItemCreateAsAction(WKContextMenuItemTag tag, W
 #if ENABLE(CONTEXT_MENUS)
     return toAPI(WebContextMenuItem::create(WebContextMenuItemData(ActionType, toImpl(tag), toImpl(title)->string(), enabled, false)).leakRef());
 #else
+    UNUSED_PARAM(tag);
+    UNUSED_PARAM(title);
+    UNUSED_PARAM(enabled);
     return 0;
 #endif
 }
@@ -62,6 +65,10 @@ WKContextMenuItemRef WKContextMenuItemCreateAsCheckableAction(WKContextMenuItemT
 #if ENABLE(CONTEXT_MENUS)
     return toAPI(WebContextMenuItem::create(WebContextMenuItemData(CheckableActionType, toImpl(tag), toImpl(title)->string(), enabled, checked)).leakRef());
 #else
+    UNUSED_PARAM(tag);
+    UNUSED_PARAM(title);
+    UNUSED_PARAM(enabled);
+    UNUSED_PARAM(checked);
     return 0;
 #endif
 }
@@ -71,6 +78,9 @@ WKContextMenuItemRef WKContextMenuItemCreateAsSubmenu(WKStringRef title, bool en
 #if ENABLE(CONTEXT_MENUS)
     return toAPI(WebContextMenuItem::create(toImpl(title)->string(), enabled, toImpl(submenuItems)).leakRef());
 #else
+    UNUSED_PARAM(title);
+    UNUSED_PARAM(enabled);
+    UNUSED_PARAM(submenuItems);
     return 0;
 #endif
 }
@@ -117,6 +127,7 @@ WKContextMenuItemTag WKContextMenuItemGetTag(WKContextMenuItemRef itemRef)
     return toAPI(toImpl(itemRef)->data()->action());
 #endif
 #else
+    UNUSED_PARAM(itemRef);
     return toAPI(ContextMenuItemTagNoAction);
 #endif
 }
@@ -126,6 +137,7 @@ WKContextMenuItemType WKContextMenuItemGetType(WKContextMenuItemRef itemRef)
 #if ENABLE(CONTEXT_MENUS)
     return toAPI(toImpl(itemRef)->data()->type());
 #else
+    UNUSED_PARAM(itemRef);
     return toAPI(ActionType);
 #endif
 }
@@ -135,6 +147,7 @@ WKStringRef WKContextMenuItemCopyTitle(WKContextMenuItemRef itemRef)
 #if ENABLE(CONTEXT_MENUS)
     return toCopiedAPI(toImpl(itemRef)->data()->title().impl());
 #else
+    UNUSED_PARAM(itemRef);
     return 0;
 #endif
 }
@@ -144,6 +157,7 @@ bool WKContextMenuItemGetEnabled(WKContextMenuItemRef itemRef)
 #if ENABLE(CONTEXT_MENUS)
     return toImpl(itemRef)->data()->enabled();
 #else
+    UNUSED_PARAM(itemRef);
     return false;
 #endif
 }
@@ -153,6 +167,7 @@ bool WKContextMenuItemGetChecked(WKContextMenuItemRef itemRef)
 #if ENABLE(CONTEXT_MENUS)
     return toImpl(itemRef)->data()->checked();
 #else
+    UNUSED_PARAM(itemRef);
     return false;
 #endif
 }
@@ -162,6 +177,7 @@ WKArrayRef WKContextMenuCopySubmenuItems(WKContextMenuItemRef itemRef)
 #if ENABLE(CONTEXT_MENUS)
     return toAPI(toImpl(itemRef)->submenuItemsAsAPIArray().leakRef());
 #else
+    UNUSED_PARAM(itemRef);
     return 0;
 #endif
 }
@@ -171,6 +187,7 @@ WKTypeRef WKContextMenuItemGetUserData(WKContextMenuItemRef itemRef)
 #if ENABLE(CONTEXT_MENUS)
     return toAPI(toImpl(itemRef)->userData());
 #else
+    UNUSED_PARAM(itemRef);
     return 0;
 #endif
 }
@@ -179,5 +196,8 @@ void WKContextMenuItemSetUserData(WKContextMenuItemRef itemRef, WKTypeRef userDa
 {
 #if ENABLE(CONTEXT_MENUS)
     toImpl(itemRef)->setUserData(toImpl(userDataRef));
+#else
+    UNUSED_PARAM(itemRef);
+    UNUSED_PARAM(userDataRef);
 #endif
 }
