Source/WebKit2/UIProcess/efl/WebViewEfl.h
@@ -57,9 +57,12 @@ private:
 
     void setCursor(const WebCore::Cursor&) OVERRIDE;
     PassRefPtr<WebPopupMenuProxy> createPopupMenuProxy(WebPageProxy*) OVERRIDE;
-    PassRefPtr<WebContextMenuProxy> createContextMenuProxy(WebPageProxy*) OVERRIDE;
     void updateTextInputState() OVERRIDE;
     void handleDownloadRequest(DownloadProxy*) OVERRIDE;
+
+#if ENABLE(CONTEXT_MENUS)
+    PassRefPtr<WebContextMenuProxy> createContextMenuProxy(WebPageProxy*) OVERRIDE;
+#endif
 
 #if ENABLE(FULLSCREEN_API)
     // WebFullScreenManagerProxyClient
