Source/WebKit2/WebProcess/InjectedBundle/API/c/WKBundlePage.cpp
@@ -65,6 +65,9 @@ void WKBundlePageSetContextMenuClient(WKBundlePageRef pageRef, WKBundlePageConte
 {
 #if ENABLE(CONTEXT_MENUS)
     toImpl(pageRef)->initializeInjectedBundleContextMenuClient(wkClient);
+#else
+    UNUSED_PARAM(pageRef);
+    UNUSED_PARAM(wkClient);
 #endif
 }
 
@@ -163,6 +166,9 @@ void WKBundlePageClickMenuItem(WKBundlePageRef pageRef, WKContextMenuItemRef ite
 {
 #if ENABLE(CONTEXT_MENUS)
     toImpl(pageRef)->contextMenu()->itemSelected(*toImpl(item)->data());
+#else
+    UNUSED_PARAM(pageRef);
+    UNUSED_PARAM(item);
 #endif
 }
 
@@ -188,6 +194,7 @@ WKArrayRef WKBundlePageCopyContextMenuItems(WKBundlePageRef pageRef)
 
     return toAPI(contextMenuItems(*contextMenu).leakRef());
 #else
+    UNUSED_PARAM(pageRef);
     return nullptr;
 #endif
 }
@@ -201,6 +208,8 @@ WKArrayRef WKBundlePageCopyContextMenuAtPointInWindow(WKBundlePageRef pageRef, W
 
     return toAPI(contextMenuItems(*contextMenu).leakRef());
 #else
+    UNUSED_PARAM(pageRef);
+    UNUSED_PARAM(point);
     return nullptr;
 #endif
 }
